# QJsonSchemaForm

./: .gitignore  CMakeLists.txt  README.md
examples/Simple/: CMakeLists.txt  JsonHighlighter.cpp  JsonHighlighter.h  MainWindow.cpp  MainWindow.h  main.cpp
include/QJsonSchemaForm/: QJsonSchemaForm.h  QJsonSchemaWidgets.h  QJsonSchemaWidgetsFactory.h
json/: arrays.json  boolean.json  numbers.json  strings.json  test.json
schema/: additional_properties.json  numbers.json  objects.json  oneOf.json  refs.json
src/: CMakeLists.txt  QJsonSchemaForm.cpp  QJsonSchemaForm.h  QJsonSchemaWidgets.cpp  QJsonSchemaWidgets.h  QJsonSchemaWidgetsFactory.cpp  QJsonSchemaWidgetsFactory.h  ToggleSwitch.cpp  ToggleSwitch.h
